force-app/main/default/objects/Contact/fields/actividades_economicas__c.field-meta.xml
<CustomField>
    <fullName>actividades_economicas__c</fullName>
    <label>Actividades Económicas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arte y recreación</fullName>
            </value>
            <value>
                <fullName>Comercio</fullName>
            </value>
            <value>
                <fullName>Comunicación e información</fullName>
            </value>
            <value>
                <fullName>Construcción</fullName>
            </value>
            <value>
                <fullName>Educación</fullName>
            </value>
            <value>
                <fullName>Empleo público</fullName>
            </value>
            <value>
                <fullName>Extractivismo</fullName>
            </value>
            <value>
                <fullName>Finanzas y aseguradoras</fullName>
            </value>
            <value>
                <fullName>Fuerzas de seguridad</fullName>
            </value>
            <value>
                <fullName>Gestión de desechos</fullName>
            </value>
            <value>
                <fullName>Industrias manufactureras</fullName>
            </value>
            <value>
                <fullName>Inmobiliarias</fullName>
            </value>
            <value>
                <fullName>Justicia</fullName>
            </value>
            <value>
                <fullName>Reparaciones y oficios</fullName>
            </value>
            <value>
                <fullName>Reparaciones y suministro de servicios básicos</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Servicios profesionales</fullName>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Turismo</fullName>
            </value>
            <value>
                <fullName>Hotelería y gastronomía</fullName>
            </value>
            <value>
                <fullName>Gas y electricidad</fullName>
            </value>
            <value>
                <fullName>Tecnología</fullName>
            </value>
            <value>
                <fullName>Suministro de agua</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>