force-app/main/default/objects/Contact/fields/ActivismoSharingRuleField__c.field-meta.xml
<CustomField>
    <fullName>ActivismoSharingRuleField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ActivismoSharingRuleField</label>
    <type>Checkbox</type>
</CustomField>