force-app/main/default/objects/Contact/fields/Administrative_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_2__c</fullName>
    <label>AdminLevel 2 CitizenObj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>