force-app/main/default/objects/Contact/fields/Age_f_x__c.field-meta.xml
<CustomField>
    <fullName>Age_f_x__c</fullName>
    <description>Formula que calcula la edad en funcion de la fecha de nacimiento del ciudadano</description>
    <formula>IF(ISNULL(Birthdate) , NULL, FLOOR((TODAY()-Birthdate +1)/365.2425))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>