force-app/main/default/objects/Contact/fields/Alerta_Buenos_Aires__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Buenos_Aires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta Buenos Aires Embajador</label>
    <type>Checkbox</type>
</CustomField>