force-app/main/default/objects/Contact/fields/Audiencia_Electoral__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Electoral__c</fullName>
    <label>Audiencia Electoral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFRACTOR CRONICO</fullName>
            </value>
            <value>
                <fullName>NO VOTA PASO</fullName>
            </value>
            <value>
                <fullName>SOLO BALLOTAGE</fullName>
            </value>
            <value>
                <fullName>EXTRANJERO</fullName>
            </value>
            <value>
                <fullName>PRIMER VOTO</fullName>
            </value>
            <value>
                <fullName>EMPADRONADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>