force-app/main/default/objects/Contact/fields/Audiencia_Generaciones__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Generaciones__c</fullName>
    <label>Audiencia Generaciones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERACION SILENCIOSA</fullName>
            </value>
            <value>
                <fullName>BABY BOOMERS</fullName>
            </value>
            <value>
                <fullName>GENERACION X</fullName>
            </value>
            <value>
                <fullName>MILENNIALS</fullName>
            </value>
            <value>
                <fullName>CENTENNIALS</fullName>
            </value>
            <value>
                <fullName>SUB 16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>