force-app/main/default/objects/Contact/fields/Audiencia_Politica__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Politica__c</fullName>
    <label>Audiencia Politica</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOLUNTARIO CAMBIEMOS</fullName>
            </value>
            <value>
                <fullName>EQUIPO CAMBIEMOS</fullName>
            </value>
            <value>
                <fullName>MILEI</fullName>
            </value>
            <value>
                <fullName>Alianza: UNION POR LA PATRIA</fullName>
            </value>
            <value>
                <fullName>Alianza: LA LIBERTAD AVANZA</fullName>
            </value>
            <value>
                <fullName>Alianza: JUNTOS POR EL CAMBIO</fullName>
            </value>
            <value>
                <fullName>Alianza: HACEMOS POR NUESTRO PAIS</fullName>
            </value>
            <value>
                <fullName>Alianza: JUNTOS POR EL CAMBIO (MISIONES)</fullName>
            </value>
            <value>
                <fullName>Alianza: FRENTE UNION POR LA PATRIA</fullName>
            </value>
            <value>
                <fullName>Alianza: JUNTOS POR ENTRE RIOS</fullName>
            </value>
            <value>
                <fullName>Alianza: FRENTE JUNTOS POR EL CAMBIO</fullName>
            </value>
            <value>
                <fullName>VOLUNTARIO MILEI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>