force-app/main/default/objects/Contact/fields/Beneficios_Sociales__c.field-meta.xml
<CustomField>
    <fullName>Beneficios_Sociales__c</fullName>
    <label>Beneficios Sociales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUH</fullName>
            </value>
            <value>
                <fullName>IFE</fullName>
            </value>
            <value>
                <fullName>Tarjeta AlimentAR</fullName>
            </value>
            <value>
                <fullName>PBF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>