force-app/main/default/objects/Contact/fields/Beneficios_Sociales_CBA__c.field-meta.xml
<CustomField>
    <fullName>Beneficios_Sociales_CBA__c</fullName>
    <label>Beneficios Sociales CBA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tarifa Social</fullName>
            </value>
            <value>
                <fullName>CBA Beneficiario PAICOR</fullName>
            </value>
            <value>
                <fullName>CBA Plan CUNA</fullName>
            </value>
            <value>
                <fullName>CBA Beneficiario Más Leche</fullName>
            </value>
            <value>
                <fullName>CBA Boleto Social</fullName>
            </value>
            <value>
                <fullName>CBA Boleto Obrero</fullName>
            </value>
            <value>
                <fullName>CBA Boleto Adulto Mayor</fullName>
            </value>
            <value>
                <fullName>CBA Boleto Educativo</fullName>
            </value>
            <value>
                <fullName>CBA Beneficiario Tarifa Solidaria</fullName>
            </value>
            <value>
                <fullName>CBA Beneficiario Tarjeta Social</fullName>
            </value>
            <value>
                <fullName>CBA Min. Mujer Subsidio por Subsistencia</fullName>
            </value>
            <value>
                <fullName>CBA Min. Mujer APROSS</fullName>
            </value>
            <value>
                <fullName>CBA Min. Mujer Ayuda Alquiler</fullName>
            </value>
            <value>
                <fullName>CBA Min. Mujer Programa Nueva Vida</fullName>
            </value>
            <value>
                <fullName>Beneficiario PAICOR</fullName>
                <isActive>false</isActive>
                <label>Beneficiario PAICOR</label>
            </value>
            <value>
                <fullName>Beneficiarios Beca Deportiva CBA</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios Beca Deportiva CBA</label>
            </value>
            <value>
                <fullName>Beneficiarios LO TENGO</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios LO TENGO</label>
            </value>
            <value>
                <fullName>Beneficiarios Mas Leche</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios Mas Leche</label>
            </value>
            <value>
                <fullName>Beneficiarios PLAN FINES</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios PLAN FINES</label>
            </value>
            <value>
                <fullName>Beneficiarios Primer Paso</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios Primer Paso</label>
            </value>
            <value>
                <fullName>Beneficiarios Tarjeta Social CBA</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios Tarjeta Social CBA</label>
            </value>
            <value>
                <fullName>Beneficiarios Vida Digna</fullName>
                <isActive>false</isActive>
                <label>Beneficiarios Vida Digna</label>
            </value>
            <value>
                <fullName>Beneficiaros Banco de la Gente</fullName>
                <isActive>false</isActive>
                <label>Beneficiaros Banco de la Gente</label>
            </value>
            <value>
                <fullName>Boleto Estudiantil CBA</fullName>
                <isActive>false</isActive>
                <label>Boleto Estudiantil CBA</label>
            </value>
            <value>
                <fullName>Boleto Jubilados CBA</fullName>
                <isActive>false</isActive>
                <label>Boleto Jubilados CBA</label>
            </value>
            <value>
                <fullName>Boleto Obrero CBA</fullName>
                <isActive>false</isActive>
                <label>Boleto Obrero CBA</label>
            </value>
            <value>
                <fullName>Plan CUNA</fullName>
                <isActive>false</isActive>
                <label>Plan CUNA</label>
            </value>
            <value>
                <fullName>Plan Hogar Clase Media</fullName>
                <isActive>false</isActive>
                <label>Plan Hogar Clase Media</label>
            </value>
            <value>
                <fullName>Plan Hogar Clase Media Mix</fullName>
                <isActive>false</isActive>
                <label>Plan Hogar Clase Media Mix</label>
            </value>
            <value>
                <fullName>Plan Provincial Agroforestal</fullName>
                <isActive>false</isActive>
                <label>Plan Provincial Agroforestal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>