force-app/main/default/objects/Contact/fields/borrar__c.field-meta.xml
<CustomField>
    <fullName>borrar__c</fullName>
    <defaultValue>true</defaultValue>
    <label>borrar</label>
    <type>Checkbox</type>
</CustomField>