force-app/main/default/objects/Contact/fields/CDP_Axis__c.field-meta.xml
<CustomField>
    <fullName>CDP_Axis__c</fullName>
    <label>EPG Axis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestAxis</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>