force-app/main/default/objects/Contact/fields/CDP_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CDP_Campaign__c</fullName>
    <label>EPG Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestCampaign</fullName>
            </value>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>Change_Eguillor</fullName>
            </value>
            <value>
                <fullName>Facebook_Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>