force-app/main/default/objects/Contact/fields/CDP_Score__c.field-meta.xml
<CustomField>
    <fullName>CDP_Score__c</fullName>
    <label>EPG Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestScore</fullName>
            </value>
            <value>
                <fullName>NINGUNO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>