force-app/main/default/objects/Contact/fields/CDP_Status__c.field-meta.xml
<CustomField>
    <fullName>CDP_Status__c</fullName>
    <label>EPG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voluntario</fullName>
            </value>
            <value>
                <fullName>NINGUNO</fullName>
            </value>
            <value>
                <fullName>Potenciales</fullName>
            </value>
            <value>
                <fullName>Activistas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>