force-app/main/default/objects/Contact/fields/Codigo_Area_Movil__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Area_Movil__c</fullName>
    <label>Código Area Movil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>