force-app/main/default/objects/Contact/fields/Codigo_internacional__c.field-meta.xml
<CustomField>
    <fullName>Codigo_internacional__c</fullName>
    <label>Código internacional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>