force-app/main/default/objects/Contact/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Comunidad</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Futbolista</fullName>
            </value>
            <value>
                <fullName>Mascoteros</fullName>
                <default>true</default>
                <label>Mascoteros</label>
            </value>
            <value>
                <fullName>Futboleros</fullName>
            </value>
            <value>
                <fullName>Lector</fullName>
            </value>
            <value>
                <fullName>Pintor</fullName>
            </value>
            <value>
                <fullName>Tenista</fullName>
            </value>
            <value>
                <fullName>Fanático de futebol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>