force-app/main/default/objects/Contact/fields/Comorbilidades__c.field-meta.xml
<CustomField>
    <fullName>Comorbilidades__c</fullName>
    <label>Comorbilidades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>HEART_FAILURE</fullName>
            </value>
            <value>
                <fullName>SMOKER</fullName>
            </value>
            <value>
                <fullName>PREGNANT</fullName>
            </value>
            <value>
                <fullName>KIDNEY_FAILURE</fullName>
            </value>
            <value>
                <fullName>NEURO_DISORDER</fullName>
            </value>
            <value>
                <fullName>UNDERWEIGHT</fullName>
            </value>
            <value>
                <fullName>ASTHMA</fullName>
            </value>
            <value>
                <fullName>COPD</fullName>
            </value>
            <value>
                <fullName>DIABETES</fullName>
            </value>
            <value>
                <fullName>HBP</fullName>
            </value>
            <value>
                <fullName>PREMATURE</fullName>
            </value>
            <value>
                <fullName>OBESITY</fullName>
            </value>
            <value>
                <fullName>ONCOLOGIC</fullName>
            </value>
            <value>
                <fullName>TB</fullName>
            </value>
            <value>
                <fullName>AKI</fullName>
            </value>
            <value>
                <fullName>CKD</fullName>
            </value>
            <value>
                <fullName>FORMER_SMOKER</fullName>
            </value>
            <value>
                <fullName>CHRONIC_LIVER_DISEASE</fullName>
            </value>
            <value>
                <fullName>IMMUNE_CONGENITAL</fullName>
            </value>
            <value>
                <fullName>BRONCHITIS</fullName>
            </value>
            <value>
                <fullName>CAP</fullName>
            </value>
            <value>
                <fullName>Discapacidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>