force-app/main/default/objects/Contact/fields/condicion_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>condicion_de_ingreso__c</fullName>
    <label>Condición de Ingreso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asalariado</fullName>
            </value>
            <value>
                <fullName>Cooperativas y precaria</fullName>
            </value>
            <value>
                <fullName>Jubilados y pensionados</fullName>
            </value>
            <value>
                <fullName>Cuenta propia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>