force-app/main/default/objects/Contact/fields/covid19_predictiva_score__c.field-meta.xml
<CustomField>
    <fullName>covid19_predictiva_score__c</fullName>
    <label>Covid19 Predictiva Score</label>
    <precision>17</precision>
    <scale>16</scale>
    <type>Number</type>
</CustomField>