force-app/main/default/objects/Contact/fields/covid19_salud__c.field-meta.xml
<CustomField>
    <fullName>covid19_salud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Covid19 Reactiva</label>
    <type>Checkbox</type>
</CustomField>