force-app/main/default/objects/Contact/fields/covid19_salud_level1__c.field-meta.xml
<CustomField>
    <fullName>covid19_salud_level1__c</fullName>
    <label>Covid19 Reactiva Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>