force-app/main/default/objects/Contact/fields/covid19_salud_level2__c.field-meta.xml
<CustomField>
    <fullName>covid19_salud_level2__c</fullName>
    <label>Covid19 Reactiva Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>