force-app/main/default/objects/Contact/fields/covid19_salud_status__c.field-meta.xml
<CustomField>
    <fullName>covid19_salud_status__c</fullName>
    <label>Covid19 Reactiva Estado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>