force-app/main/default/objects/Contact/fields/Covid19_Score_Percent__c.field-meta.xml
<CustomField>
    <fullName>Covid19_Score_Percent__c</fullName>
    <formula>covid19_predictiva_score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covid19 Predictiva Score Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>