force-app/main/default/objects/Contact/fields/covid19_sms_send__c.field-meta.xml
<CustomField>
    <fullName>covid19_sms_send__c</fullName>
    <defaultValue>false</defaultValue>
    <label>covid sms send</label>
    <type>Checkbox</type>
</CustomField>