force-app/main/default/objects/Contact/fields/covid_cuidarnos__c.field-meta.xml
<CustomField>
    <fullName>covid_cuidarnos__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True si fecha de ingreso O fecha de egreso no nulo al dia 22-mar-2020</description>
    <label>covid_cuidarnos</label>
    <type>Checkbox</type>
</CustomField>