force-app/main/default/objects/Contact/fields/covid_vacc_1st_dose__c.field-meta.xml
<CustomField>
    <fullName>covid_vacc_1st_dose__c</fullName>
    <label>covid primera dosis</label>
    <type>Date</type>
</CustomField>