force-app/main/default/objects/Contact/fields/covid_vacc_3rd_dose__c.field-meta.xml
<CustomField>
    <fullName>covid_vacc_3rd_dose__c</fullName>
    <label>covid tercera dosis</label>
    <type>Date</type>
</CustomField>