force-app/main/default/objects/Contact/fields/covid_vacc_desc__c.field-meta.xml
<CustomField>
    <fullName>covid_vacc_desc__c</fullName>
    <label>Descripcion Vacuna</label>
    <length>255</length>
    <type>Text</type>
</CustomField>