force-app/main/default/objects/Contact/fields/Cuidarnos_Citizen_Marked__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Citizen_Marked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuidarnos Citizen Marked</label>
    <type>Checkbox</type>
</CustomField>