force-app/main/default/objects/Contact/fields/Cuidarnos_Citizen_Observation__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Citizen_Observation__c</fullName>
    <label>Cuidarnos Citizen Observation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>