force-app/main/default/objects/Contact/fields/Cuidarnos_Confirmado__c.field-meta.xml
<CustomField>
    <fullName>Cuidarnos_Confirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuidarnos Confirmado</label>
    <type>Checkbox</type>
</CustomField>