force-app/main/default/objects/Contact/fields/Cuil_Number__c.field-meta.xml
<CustomField>
    <fullName>Cuil_Number__c</fullName>
    <externalId>true</externalId>
    <label>CUIL/CUIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>