force-app/main/default/objects/Contact/fields/delphos_tribe_2019__c.field-meta.xml
<CustomField>
    <fullName>delphos_tribe_2019__c</fullName>
    <label>Delphos Tribe 2019</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cosmopolitas</fullName>
            </value>
            <value>
                <fullName>Meritócratas</fullName>
            </value>
            <value>
                <fullName>Progresistas</fullName>
            </value>
            <value>
                <fullName>Religiosos</fullName>
            </value>
            <value>
                <fullName>Sectores populares</fullName>
            </value>
            <value>
                <fullName>Subsistentes</fullName>
            </value>
            <value>
                <fullName>Tradicionalistas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>