force-app/main/default/objects/Contact/fields/Direccion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Completa__c</fullName>
    <description>Direccion + Numero</description>
    <formula>MailingStreet + &apos; &apos; +  MailingNumber__c + &apos; &apos; + MailingAppartment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direccion Completa</label>
    <type>Text</type>
</CustomField>