force-app/main/default/objects/Contact/fields/ec_companies__c.field-meta.xml
<CustomField>
    <fullName>ec_companies__c</fullName>
    <label>Sociedades</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--default--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>