force-app/main/default/objects/Contact/fields/ec_degree__c.field-meta.xml
<CustomField>
    <fullName>ec_degree__c</fullName>
    <label>Diploma</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ECONOMISTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>