force-app/main/default/objects/Contact/fields/ec_driving_license__c.field-meta.xml
<CustomField>
    <fullName>ec_driving_license__c</fullName>
    <label>Tipos de licencia de conducir</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>