force-app/main/default/objects/Contact/fields/ec_electoral_canton_name__c.field-meta.xml
<CustomField>
    <fullName>ec_electoral_canton_name__c</fullName>
    <label>Cantón Votación</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--default--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>