force-app/main/default/objects/Contact/fields/ec_employment_activity__c.field-meta.xml
<CustomField>
    <fullName>ec_employment_activity__c</fullName>
    <label>Actividad Empleo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>