force-app/main/default/objects/Contact/fields/ec_employment_business_type__c.field-meta.xml
<CustomField>
    <fullName>ec_employment_business_type__c</fullName>
    <label>Tipo Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>