force-app/main/default/objects/Contact/fields/ec_employment_end__c.field-meta.xml
<CustomField>
    <fullName>ec_employment_end__c</fullName>
    <label>Finalización relación laboral</label>
    <type>Date</type>
</CustomField>