force-app/main/default/objects/Contact/fields/ec_employment_income__c.field-meta.xml
<CustomField>
    <fullName>ec_employment_income__c</fullName>
    <label>Ingreso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>