force-app/main/default/objects/Contact/fields/ec_employment_start__c.field-meta.xml
<CustomField>
    <fullName>ec_employment_start__c</fullName>
    <label>Comienzo relación laboral</label>
    <type>Date</type>
</CustomField>